<resources>
    <string name="app_name">University_Management_System</string>
    <string name="Login">Login</string>
    <string name="Username">User Name</string>
    <string name="password">Password</string>
    <string name="studentsign">SIGN IN AS STUDENT</string>
    <string name="adminsign">SIGN IN AS ADMIN</string>
    <string name="adminid">Admin Id</string>
    <string name="adminname">Admin Name</string>
    <string name="adminpass">Admin Password</string>
    <string name="adminnewpass">New Password</string>
    <string name="adminconpass">Conform New Password</string>
    <string name="save">SAVE</string>
    <string name="update_profile">UPDATE PROFILE</string>
    <string name="delete_profile">DELETE PROFILE</string>
    <string name="creat_profile">CREATE PROFILE</string>
    <string name="studnet_id">Student ID</string>
    <string name="student_name">Student Name</string>
    <string name="student_birth">Date Of Birth</string>
    <string name="address">Adress</string>
    <string name="contact">Contact No</string>
    <string name="Alvele">A/L Results</string>
    <string name="date_dd">dd-mm-yyyy</string>
    <string name="update_student">Update Student Details</string>
    <string name="save_student">Save Details</string>
    <string name="result">Result</string>
    <string name="result_sheet">Results Sheet</string>
    <string name="View_marks">VIEW MARKS</string>
    <string name="exame_id">Exam ID</string>
    <string name="exame_id_enter">Enter the Exam ID</string>
    <string name="gpa">GPA</string>
    <string name="update_result">UPDATE RESULT</string>
    <string name="delete_result">DELETE RESULT</string>
    <string name="enter_result">ENTER RESULT</string>
    <string name="save_result">SAVE</string>
    <string name="add_new">ADD NEW</string>
    <string name="insert_ppr">INSERT PAPER</string>
    <string name="delete_ppr">DELETE PAPER</string>
    <string name="notice">NOTICES</string>
    <string name="insert_notice">INSERT NOTICE</string>
    <string name="update_notice">UPDATE NOTICE</string>
    <string name="delete_notice">DELETE NOTICE</string>
</resources>