<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#77D0F8"
    tools:context=".exam_enter">

    <Button
        android:id="@+id/bexe1"
        android:layout_width="113dp"
        android:layout_height="48dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="80dp"
        android:background="@android:color/background_light"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bexe"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bexe"
        android:layout_width="113dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginBottom="80dp"
        android:background="@android:color/background_light"
        android:text="@string/add_new"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bexe1" />

    <EditText
        android:id="@+id/plexe1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/plexe"
        app:layout_constraintStart_toEndOf="@+id/tvexe" />

    <EditText
        android:id="@+id/plexe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/plexe2"
        app:layout_constraintStart_toEndOf="@+id/tvexe2" />

    <EditText
        android:id="@+id/plexe2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/plexe3"
        app:layout_constraintStart_toEndOf="@+id/tvexe3" />

    <EditText
        android:id="@+id/plexe3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/plexe4"
        app:layout_constraintStart_toEndOf="@+id/tvexe4" />

    <EditText
        android:id="@+id/plexe4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginLeft="53dp"
        android:layout_marginBottom="202dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/bexe"
        app:layout_constraintStart_toEndOf="@+id/tvexe5" />

    <TextView
        android:id="@+id/tvexe1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="164dp"
        android:layout_marginRight="164dp"
        android:text="@string/enter_result"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvexe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginBottom="23dp"
        android:text="@string/studnet_id"
        app:layout_constraintBottom_toTopOf="@+id/tvexe2"
        app:layout_constraintEnd_toStartOf="@+id/plexe1"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvexe2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:layout_marginBottom="17dp"
        android:text="@string/exame_id"
        app:layout_constraintBottom_toTopOf="@+id/tvexe3"
        app:layout_constraintEnd_toStartOf="@+id/plexe"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvexe3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="35dp"
        android:text="@string/student_name"
        app:layout_constraintBottom_toTopOf="@+id/tvexe4"
        app:layout_constraintEnd_toStartOf="@+id/plexe2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvexe4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginEnd="65dp"
        android:layout_marginRight="65dp"
        android:layout_marginBottom="19dp"
        android:text="@string/gpa"
        app:layout_constraintBottom_toTopOf="@+id/tvexe5"
        app:layout_constraintEnd_toStartOf="@+id/plexe3"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvexe5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginEnd="53dp"
        android:layout_marginRight="53dp"
        android:layout_marginBottom="211dp"
        android:text="@string/result"
        app:layout_constraintBottom_toTopOf="@+id/bexe1"
        app:layout_constraintEnd_toStartOf="@+id/plexe4"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>